package com.kedacom.vconf.sdk.base.basement;

interface INotificationProcessor {
    boolean processNotification(String ntfName, String ntfBody);
}
