package com.kedacom.vconf.sdk.base.basement;

interface IResponseProcessor {
    boolean processResponse(String rspName, String rspBody);
}
