@startuml




package "frame" {

abstract class Requester{
}

interface IRequestProcessor{

}

interface ICommandProcessor{

}

interface ISubscribeProcessor{

}


class SessionManager implements IRequestProcessor, IResponseProcessor{
}

class CommandManager implements ICommandProcessor{
}

class NotifyManager implements ISubscribeProcessor, INotificationProcessor{
}

interface IResponseProcessor{

}

interface INotificationProcessor{

}

class NativeInteractor{
}

'interface INativeCallback{
'
'}

'class JsonManager{
'}


'class MessageRegister{
'}



Requester o-- IRequestProcessor
Requester o-- ICommandProcessor
Requester o-- ISubscribeProcessor

SessionManager o-- NativeInteractor
CommandManager o-- NativeInteractor
NotifyManager o-- NativeInteractor

NativeInteractor o-- IResponseProcessor
NativeInteractor o-- INotificationProcessor

'SessionManager *-- MessageRegister
'CommandManager *-- MessageRegister
'NotifyManager *-- MessageRegister
'SessionManager *-- JsonManager
'CommandManager *-- JsonManager
'NotifyManager *-- JsonManager

}


@enduml